--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1066,61 +1066,9 @@ persitencePlugin.load.error=Unable to load the persistence plugin {0}.
 #A tip (in the welcome screen) that presents the Cloud functionnality
 Tip.10=<html>Access your data from any computer.<hr style="width:40%">In save dialog, the <b>Dropbox</b> tab allows you to save data to your Dropbox account and then access it from any computer connected to the Internet.<br><br>To do this, you will need just a Dropbox account available here: <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
 
-#Core JClop messages
-
-#Wordings related to the new file selection dialog
-com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=This button is disabled because no file is selected
-com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Open
-com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Save
-
-#Wordings related to computer's storage tab of the file selection dialog.
-com.fathzer.soft.jclop.FileChooserPanel.title=Computer
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=Select this tab to save data to your local storage
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=Select this tab to read data from your local storage
-
-com.fathzer.soft.jclop.Chooser.account=Account: 
-#first argument is the available space, second is the unit
-com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} free
-com.fathzer.soft.jclop.Chooser.new.tooltip=Creates a new account
-com.fathzer.soft.jclop.Chooser.delete=Delete
-com.fathzer.soft.jclop.Chooser.delete.tooltip=Deletes the local data about the selected account
-com.fathzer.soft.jclop.Chooser.delete.message.title=Delete account
-com.fathzer.soft.jclop.Chooser.delete.message=<html>Are you sure you want to delete this account ?<br><br>It will only delete the copy made on your computer, not the remote account.</html>
-com.fathzer.soft.jclop.Chooser.refresh=Refresh
-com.fathzer.soft.jclop.Chooser.refresh.tooltip=Click this button to refresh the file list according to Dropbox content
-com.fathzer.soft.jclop.Chooser.fileName=File: 
-com.fathzer.soft.jclop.GenericWait.title=Please wait ...
-
-#Wordings related to data size units
-com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
-com.fathzer.soft.jclop.Generic.data.unit.kBytes=kB
-com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
-com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
-
-#end of core JClop messages
-
-#Wordings related to the dropbox tab of the file selection dialog
-dropbox.Chooser.ConnectionDialog.title=Connect to Dropbox
-dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam will only have access to a specific folder (/Applications/Yapbam), not your whole account.<br><br>Click the \"<b>{0}</b>\" button when you are ready to link Yapbam to your account (requires an Internet connection)<br>Then, you will be redirected to a browser window where Dropbox will ask you to grant access to Yapbam.<br><br><b>After</b> you''ve granted access to Dropbox, click the "<b>{1}</b>" button</html>
-dropbox.Chooser.ConnectionDialog.message.header=<html>Storing data to <b>Dropbox</b> requires that you authorize Yapbam to access your Dropbox account.</html>
-dropbox.Chooser.ConnectionDialog.startButton=Start Connection
-dropbox.Chooser.ConnectionDialog.startButton.tooltip=Click this button to start the connection process.
-dropbox.Chooser.ConnectionDialog.accessNotGranted=It seems you didn't grant access to Yapbam, please retry.
-dropbox.Chooser.ConnectionDialog.unexpectedError=An unexpected error occurred while connecting to Dropbox.
-dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>You may click the <b>{0}</b> button first.</html>
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=Sorry, an unexpected error occurred while launching the browser.
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Unable to launch browser
-
-dropbox.Chooser.read.tabTooltip=Select this tab to read data from your Dropbox account
-dropbox.Chooser.save.tabTooltip=Select this tab to save to your Dropbox account
-dropbox.Chooser.connecting=Connecting to Dropbox...
-dropbox.Chooser.error.connectionFailed=<html>Unable to connect to Dropbox.<br>It seems you are not connected to the Internet</html>
-
 #Wordings related to the synchronization with Dropbox
 dropbox.conflict=Both data stored on your computer and the one on Dropbox were modified.
 dropbox.dropbox.remoteDeleted=That file doesn't exist anymore on Dropbox.
-dropbox.downloading=Downloading from Dropbox ...
-dropbox.uploading=Uploading to Dropbox ...
 dropbox.download.action=Download Dropbox data to computer
 dropbox.upload.action=Upload computer data to Dropbox
 
@@ -1161,3 +1109,68 @@ checkbookDialog.Edit.tooltip=Edits the selected checkbook
 #Adds a test to prevent creating periodical transaction with next date after end date.
 PeriodicalTransactionDialog.error.nextDateAfterEnd=The next date is after the end date
 PeriodicalTransactionDialog.error.endDate=The end date is invalid
+
+
+#Core JClop messages
+
+#Wordings related to the new file selection dialog
+com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=This button is disabled because no file is selected
+com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Open
+com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Save
+
+#Wordings related to computer's storage tab of the file selection dialog.
+com.fathzer.soft.jclop.FileChooserPanel.title=Computer
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=Select this tab to save data to your local storage
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=Select this tab to read data from your local storage
+
+com.fathzer.soft.jclop.Chooser.account=Account: 
+#first argument is the available space, second is the unit
+com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} free
+#com.fathzer.soft.jclop.Chooser.refresh=Refresh
+com.fathzer.soft.jclop.Chooser.refresh.tooltip=Click this button to refresh the file list according to Dropbox content
+com.fathzer.soft.jclop.Chooser.fileName=File: 
+
+#Wordings related to data size units
+com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
+com.fathzer.soft.jclop.Generic.data.unit.kBytes=kB
+com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
+com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
+
+#end of core JClop messages
+
+#Wordings related to the JClop dropbox service
+#Wordings related to the dropbox tab of the file selection dialog
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.title=Connect to Dropbox
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.content=<html>Yapbam will only have access to a specific folder (/Applications/Yapbam), not your whole account.<br><br>Click the \"<b>{0}</b>\" button when you are ready to link Yapbam to your account (requires an Internet connection)<br>Then, you will be redirected to a browser window where Dropbox will ask you to grant access to Yapbam.<br><br><b>After</b> you''ve granted access to Dropbox, click the "<b>{1}</b>" button</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.header=<html>Storing data to <b>Dropbox</b> requires that you authorize Yapbam to access your Dropbox account.</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton=Start Connection
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton.tooltip=Click this button to start the connection process.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.accessNotGranted=It seems you didn't grant access to Yapbam, please retry.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.unexpectedError=An unexpected error occurred while connecting to Dropbox.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.processNotStarted=<html>You may click the <b>{0}</b> button first.</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.message=Sorry, an unexpected error occurred while launching the browser.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.title=Unable to launch browser
+
+com.fathzer.soft.jclop.dropbox.read.tabTooltip=Select this tab to read data from your Dropbox account
+com.fathzer.soft.jclop.dropbox.save.tabTooltip=Select this tab to save to your Dropbox account
+
+com.fathzer.soft.jclop.dropbox.connecting=Connecting to Dropbox...
+#com.fathzer.soft.jclop.dropbox.error.connectionFailed=<html>Unable to connect to Dropbox.<br>It seems you are not connected to the Internet</html>
+
+#General wordings
+com.fathzer.soft.jclop.dropbox.downloading=Downloading from Dropbox...
+com.fathzer.soft.jclop.dropbox.uploading=Uploading to Dropbox...
+
+#End of dialog related to Dropbox service
+
+
+com.fathzer.soft.jclop.GenericWait.title=Please wait...
+com.fathzer.soft.jclop.Error.title=An error occurred
+com.fathzer.soft.jclop.Error.unableToSerializeAccount=Sorry, the login data can't be saved. It will be forget when you will close Yapbam
+
+com.fathzer.soft.jclop.Chooser.new.tooltip=Creates a new account
+com.fathzer.soft.jclop.Chooser.delete=Delete
+com.fathzer.soft.jclop.Chooser.delete.tooltip=Deletes the local data about the selected account
+com.fathzer.soft.jclop.Chooser.delete.message.title=Delete account
+com.fathzer.soft.jclop.Chooser.delete.message=<html>Are you sure you want to delete this account?<br><br>It will only delete the copy made on your computer, not the remote account.</html>
+
