--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -816,7 +816,7 @@ AccountsSummary.FinalBalance=Final balance
 #-------- New "important news" screen -------
 ImportantNews.title=Important news
 ImportantNews.intro=The latest Yapbam update has resulted in significant changes below
-ImportantNews.0.8.2=The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}</b> tab.<br><br> The purpose of this change is to avoid checking errors. Indeed, in the view <b>{1}</b>, it was possible to check by mistake, a transaction already checked, or belonging to the wrong account.<br>The <b>{0}</b> is now only available in the view <b>{2}</b> when <b>{3}</b> menu item is selected, which makes these errors impossible.
+ImportantNews.0.8.2=<html>The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}</b> tab.<br><br> The purpose of this change is to avoid checking errors. Indeed, in the view <b>{1}</b>, it was possible to check by mistake, a transaction already checked, or belonging to the wrong account.<br>The <b>{0}</b> is now only available in the view <b>{2}</b> when <b>{3}</b> menu item is selected, which makes these errors impossible.</html>
 
 #-------- New preference panel about transaction editing -------
 TransactionEditingPreferencesPanel.title=Transaction editing
@@ -1215,4 +1215,4 @@ MainMenu.CheckUpdate.ProxyAuthError=<HTML>Unable to connect with the update serv
 
 PreferencesDialog.AutoUpdate.forcedCheck.message=<html><p><b>Warning:</b> Updates are important!<br><br>Besides adding features, they can also fix problems.<br>It is therefore strongly recommended to keep Yapbam uptodate (as Java).<br><br>Therefore, regardless of the above settings, the check is always performed at least once per month.</p></html>
 
-ImportantNews.0.14.5=Version 0.15.0 introduces the ability to save data to a <b>Dropbox</b> account.<br>This allows you to recover and synchronize your data from any Internet-connected computer (including a work PC on which it is not possible to install the Dropbox software).<br><br>We draw your attention to the fact that <u><b>this feature is currently in beta</b></u>.<br>Be sure to keep a copy of your data and do not hesitate to report any problem at support@yapbam.net.
+ImportantNews.0.14.5=<html>Version 0.15.0 introduces the ability to save data to a <b>Dropbox</b> account.<br>This allows you to recover and synchronize your data from any Internet-connected computer (including a work PC on which it is not possible to install the Dropbox software).<br><br>We draw your attention to the fact that <u><b>this feature is currently in beta</b></u>.<br>Be sure to keep a copy of your data and do not hesitate to report any problem at support@yapbam.net.</html>
