--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1208,11 +1208,19 @@ PreferencesDialog.Theme.fontSize.tooltip.enabled=Move the slider to change the f
 #Adds a menu file in the file menu to display the latest opened files  
 RecentFiles.title=Recent files
 RecentFiles.tooltip=Choose a file in the submenu to open it
+#Alert dialog displayed when a deleted file is selected
 RecentFiles.unreachable.title=File not found
 RecentFiles.unreachable.message=<html>Sorry this file is no longer accessible.<br><br>Do you want to remove it from the recent files list?</html>
 
+#A detailed error when proxy setting is wrong while looking for updates 
 MainMenu.CheckUpdate.ProxyAuthError=<HTML>Unable to connect with the update server.<BR>The proxy refused the connection.<BR><BR>Please check your Proxy settings.</HTML>
 
+#A message displayed when an update is available and the version is ... old
 PreferencesDialog.AutoUpdate.forcedCheck.message=<html><p><b>Warning:</b> Updates are important!<br><br>Besides adding features, they can also fix problems.<br>It is therefore strongly recommended to keep Yapbam uptodate (as Java).<br><br>Therefore, regardless of the above settings, the check is always performed at least once per month.</p></html>
 
+#A message, displayed once at startup, that introduces Dropbox synchronization
 ImportantNews.0.14.5=<html>Version 0.15.0 introduces the ability to save data to a <b>Dropbox</b> account.<br>This allows you to recover and synchronize your data from any Internet-connected computer (including a work PC on which it is not possible to install the Dropbox software).<br><br>We draw your attention to the fact that <u><b>this feature is currently in beta</b></u>.<br>Be sure to keep a copy of your data and do not hesitate to report any problem at support@yapbam.net.</html>
+
+#A new button to ignore end date in the "balance history" panel
+BalanceHistory.ignoreEnd=Ignore end date
+BalanceHistory.ignoreEnd.toolTip=Check this box to ignore the end date defined by the filter
