--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="var" path="COMMONS-CODEC"/>
 	<classpathentry kind="var" path="COMMONS-LANG"/>
 	<classpathentry kind="var" path="COMMONS-LOGGING"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/YapbamCommons"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
