--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1174,9 +1174,6 @@ com.fathzer.soft.jclop.dropbox.Chooser.delete.tooltip=Deletes the local data abo
 com.fathzer.soft.jclop.dropbox.Chooser.delete.message=<html>Are you sure you want to disconnect from this account ?<br><br>It will delete all data about this account that was stored on your computer.<br>The data stored in Dropbox will remain unmodified.</html>
 com.fathzer.soft.jclop.dropbox.communication.unexpectedError=An unexpected error occurred while communication with Dropbox
 
-#Improvement of the message indicating that a data file is corrupted
-MainMenu.Open.Error.DialogContent=<html>Sorry, file {0} could not be read.<br>If you did not make a mistake while choosing the file, it is maybe corrupted.<br><br>Then, help can be obtained via email.<br>Send your data file and the message below to <b>support@yapbam.net</b>.<br><br>Your data will only be used in order to fix the file (or Yapbam, if the problem is not with your file).<br>We cannot guarantee that all your data will be recovered.</html>
-
 #Message when trying to write data to a non writable file
 saveDialog.fileNotWritable=<html>Sorry, this application can't write to this file.<br><br>Most commons causes are:<br>- The file is opened in another application.<br>- The file is located in a directory you are not allowed to write in.<br>- The file is write protected.</html>
 openDialog.fileNotReadable=<html>Sorry, this application can't read this file.<br><br>Most commons causes are:<br>- The file is opened in another application.<br>- The owner of this file does not give you the right to read.</html>
@@ -1225,5 +1222,7 @@ ImportantNews.0.14.5=<html>Version 0.15.0 introduces the ability to save data to
 BalanceHistory.ignoreEnd=Ignore end date
 BalanceHistory.ignoreEnd.toolTip=Check this box to ignore the end date defined by the filter
 
+#Improvement of the message indicating that a data file is corrupted or not a yapbam file
+MainMenu.Open.Error.DialogContent=<html>Sorry, file <b>{0}</b> not seem to be a file of data from Yapbam.<br><br>If you did not make a mistake while choosing the file, it is maybe corrupted.<br><br>Then, help can be obtained via email.<br>Send your data file and the message below to <b>support@yapbam.net</b>.<br><br>Your data will only be used in order to fix the file (or Yapbam, if the problem is not with your file).<br>We cannot guarantee that all your data will be recovered.</html>
 #A new dialog when trying to open a file that needs a newer version of Yapbam ({0} is the file name).
-MainMenu.Open.Error.DialogContent.needUpdate=<html>Sorry, file {0} could not be read.<br>These data appear to come from a newer Yapbam version than yours.<br><br><b>We recommend you to update Yapbam.</b>
+MainMenu.Open.Error.DialogContent.needUpdate=<html>Sorry, file <b>{0}</b> could not be read.<br>These data appear to come from a newer Yapbam version than yours.<br><br>We recommend you to <b>update Yapbam</b>.</html>
