--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1226,3 +1226,9 @@ BalanceHistory.ignoreEnd.toolTip=Check this box to ignore the end date defined b
 MainMenu.Open.Error.DialogContent=<html>Sorry, file <b>{0}</b> not seem to be a file of data from Yapbam.<br><br>If you did not make a mistake while choosing the file, it is maybe corrupted.<br><br>Then, help can be obtained via email.<br>Send your data file and the message below to <b>support@yapbam.net</b>.<br><br>Your data will only be used in order to fix the file (or Yapbam, if the problem is not with your file).<br>We cannot guarantee that all your data will be recovered.</html>
 #A new dialog when trying to open a file that needs a newer version of Yapbam ({0} is the file name).
 MainMenu.Open.Error.DialogContent.needUpdate=<html>Sorry, file <b>{0}</b> could not be read.<br>These data appear to come from a newer Yapbam version than yours.<br><br>We recommend you to <b>update Yapbam</b>.</html>
+
+#A new tool in the statement view. When entering the final balance of a statement in the following field, Yapbam computes the gap between current final balance and this target
+#This could be useful to retrieve checking errors
+CheckModePanel.target=Target balance at end:
+CheckModePanel.target.tooltip=<html>Enter the ending balance of your statement.<br>The field below will then show the difference between the current balance and that target.</html>
+CheckModePanel.gap=(Gap: {0})
