--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,9 @@
 	<================================================================================================-->
 	<property file="customPaths.properties"/>
 	
+	<!-- Yapbam version. This should have the following format = major.minor.build.comment were
+		major, minor and build are integers. comment is a string that do not contain space character. 
+	 -->
 	<property name="yapbamVersion" value="0.15.4"/>
 	<tstamp><format property="TODAY" pattern="dd/MM/yyyy" locale="fr,FR"/></tstamp>
 	
@@ -80,7 +83,8 @@
 		<echo>logging</echo>
 		<javac srcdir="${apache.commons.logging.path}" includes="org/apache/commons/logging/impl/LogFactoryImpl.java,org/apache/commons/logging/impl/SimpleLog.java" destdir="releaseCompile" source="1.6" target="1.6" encoding="ISO8859-1" includeAntRuntime="false" debug="true"/>
 		<echo>end logging</echo>
-		<javac srcdir="src" destdir="releaseCompile" source="1.6" target="1.6" encoding="ISO8859-1" sourcepath="${jfreechart.path};${jcommon.path};${yapbam.commons.path};${ajlib.path};${apache.commons.lang.path};${javaluator.path};${jclop.path};${jclop-dropbox.path};${dropbox.path};${apache.commons.codec.path};${apache.http.client.path};${apache.http.core.path};${jsonsimple.path};${apache.commons.logging.path};;${opencsv.path}" includeAntRuntime="false" debug="true"/>
+		<javac srcdir="src" destdir="releaseCompile" source="1.6" target="1.6" encoding="ISO8859-1" sourcepath="${jfreechart.path};${jcommon.path};${yapbam.commons.path};
+		    C:/Users/Jean-Marc/workspace/YapbamCommons/workInProgress;${ajlib.path};${apache.commons.lang.path};${javaluator.path};${jclop.path};${jclop-dropbox.path};${dropbox.path};${apache.commons.codec.path};${apache.http.client.path};${apache.http.core.path};${jsonsimple.path};${apache.commons.logging.path};;${opencsv.path}" includeAntRuntime="false" debug="true"/>
 		<property name="appDir" value="${releaseDir}/App"/>
 		<property name="othersDir" value="${releaseDir}/Other"/>
 		<property name="helpDir" value="${othersDir}/Help"/>
