--- a/Yapbam/.settings/org.eclipse.core.resources.prefs
+++ b/Yapbam/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,3 @@
-#Mon Jan 23 14:53:44 CET 2012
 eclipse.preferences.version=1
 encoding//src/localization/fr/relnotes.txt=UTF-8
-encoding//srcTests/net/yapbam/popup/Test.java=ISO-8859-1
+encoding/<project>=ISO-8859-1
