--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1232,3 +1232,9 @@ MainMenu.Open.Error.DialogContent.needUpdate=<html>Sorry, file <b>{0}</b> could 
 CheckModePanel.target=Target balance at end:
 CheckModePanel.target.tooltip=<html>Enter the ending balance of your statement.<br>The field below will then show the difference between the current balance and that target.</html>
 CheckModePanel.gap=(Gap: {0})
+
+Archive.menu.name=Archive
+Archive.menu.tooltip=Archives old transactions to an archive file
+Archive.selectionDialog.title=Choose the archive file or create a new one
+Archive.selectionDialog.create=Create
+Archive.selectionDialog.select=Select
